Add authentication system with email/password and Google OAuth
- Implement Supabase Auth with JWT tokens
- Add email/password signup and login
- Add Google OAuth integration
- Create protected routes and authentication middleware
- Add user-specific data isolation
- Implement role-based access control (admin/member)
- Update database schema with user references
- Add beautiful login/signup pages
- Update API client with automatic token injection
- Add logout functionality
- Include comprehensive setup documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL=your_supabase_connection_string
+SUPABASE_URL=your_supabase_url
+SUPABASE_ANON_KEY=your_supabase_anon_key
 OPENAI_API_KEY=your_openai_key
 PORT=3000
